<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1F1F1"
        android:orientation="vertical"
        android:padding="5dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:text="@string/questions"
                android:textColor="#000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingLeft="5dp"
                android:text="@string/menu"
                android:textColor="@color/app_deep_blue"
                android:textSize="16sp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_questions_bar"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/byDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/left_rounded"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/byData"
                android:textColor="#5D95B2" />

            <Button
                android:id="@+id/byVotes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/byVotes"
                android:textColor="#5D95B2" />

            <Button
                android:id="@+id/unanswered"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/right_rounded"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/unanswered"
                android:textColor="#5D95B2" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/answer_blue" />

    <ListView
        android:id="@+id/post_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:cacheColorHint="#00000000"
        android:divider="#F1F1F1"
        android:dividerHeight="1dp"
        android:fadingEdge="none"
        android:listSelector="#00000000" />
    <!--
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/answer_blue" />

    <Button
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/help"
        android:textColor="@color/app_deep_blue" />    -->

</LinearLayout>