<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_light_blue"
        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:src="@drawable/leftarrow" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingLeft="5dp"
                android:text="@string/back_button_text"
                android:textColor="@color/app_deep_blue"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_answer"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="right"
            android:text="@string/submit_button_text"
            android:textColor="@color/app_deep_blue"
            android:textSize="16sp" >
        </Button>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/answer_blue"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/fan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:textColor="#808080"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="5dp"
            android:textColor="#808080"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/text_answer_editer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/hint_message"
        android:lineSpacingExtra="5sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:singleLine="false"
        android:textSize="12sp" />

</LinearLayout>