<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_light_blue"
        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="10dp"
                android:layout_height="20dp"
                android:src="@drawable/leftarrow" />

            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingLeft="5dp"
                android:text="@string/back_button_text"
                android:textColor="@color/app_deep_blue"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/audio_answer"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@null"
            android:gravity="right"
            android:text="@string/submit_button_text"
            android:textColor="@color/app_deep_blue"
            android:textSize="16sp" >
        </Button>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.1dp"
        android:background="?android:attr/listDivider" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/answer_blue"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/fan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp"
                    android:textColor="#808080"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:textColor="#808080"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="240dp"
                android:background="#000"
                android:orientation="vertical" >

                <com.yaponit.view.TimeScalesView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/time_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="2dp"
                        android:paddingTop="10dp" >
                    </LinearLayout>
                </com.yaponit.view.TimeScalesView>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="#FFF" />

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="70dp"
                            android:layout_gravity="right"
                            android:layout_marginBottom="5dp"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/timescale1" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="#FFF" />

                        <ImageView
                            android:layout_width="14dp"
                            android:layout_height="70dp"
                            android:layout_gravity="right"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/timescale2" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="#FFF" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/timer_slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <ImageView
                            android:layout_width="3dp"
                            android:layout_height="172dp"
                            android:background="@drawable/timeslider" />
                    </LinearLayout>
                </FrameLayout>

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#FFF"
                    android:textSize="30sp" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000"
                android:paddingBottom="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/review_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:background="@null"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/review_button_text"
                    android:textColor="#FFF"
                    android:textSize="16sp" >
                </Button>

                <Button
                    android:id="@+id/record_button"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/record" >
                </Button>

                <Button
                    android:id="@+id/submit_button2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/submit_button_text"
                    android:textColor="#FFF"
                    android:textSize="16sp" >
                </Button>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>